# CppLogger

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
cpp/: Logger.cpp  consoleWriter.cpp  fileWriter.cpp  loggerFactory.cpp
h/: IWriter.h  Logger.h  consoleWriter.h  fileWriter.h  logger.h  loggerFactory.h  mlog.h
